--- a/deploment-gtnh.yaml
+++ b/deploment-gtnh.yaml
@@ -19,8 +19,26 @@ spec:
             - containerPort: 25565
           volumeMounts:
             - name: data-volume
-              mountPath: /app/World
+              mountPath: /app
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              while true
+              do
+                 java -Xms4G -Xmx4G -Dfml.readTimeout=180 @java9args.txt nogui
+                  echo "If you want to completely stop the server process now, press Ctrl+C before the time is up!"
+                  echo "Rebooting in:"
+                  for i in 12 11 10 9 8 7 6 5 4 3 2 1
+                  do
+                      echo "$i..."
+                      sleep 1
+                  done
+                  echo "Rebooting now!"
+              done
+          resources:
+            limits:
+              memory: 4Gi
       volumes:
         - name: data-volume
           hostPath:
-            path: /mine-data-gtnh
+            path: /mine-gtnh
